Fix white gap on top - add background color

--- a/app/globals.css
+++ b/app/globals.css
@@ -13,4 +13,5 @@ html, body {
   overflow: hidden;
   touch-action: manipulation;
   overscroll-behavior: none;
+  background: #000;
 }
